-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.3.0, Qt Creator 2.3.1
-
None
-
Windows Vista or Windows 7, Miscosoft Visual C++ Compiler 10.0 (x86), cdb
-
5e7e6e5a9cbf6c01ce71694c9d278463b57a1a0d, 71b2cbef9a811a0b1cc5ce88a748805a9090ea5e
if you set an breakpoint in line 9 and then start debugging, the breakpoint is displaced to line 11.
3: int x = 1;
4:
5: switch {
6: case 1:
7:
Worked fine with Qt Creator 2.1
For Gerrit Dashboard: QTCREATORBUG-6207 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
5838,1 | Debugger[CDB]: Introduce setting for breakpoint correction. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
5964,1 | CDB breakpoints: Fix line adjustment in case statements. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |