Debugger[CDB]: Introduce setting for breakpoint correction.

Make it possible to turn it off in case something goes wrong.
Squeeze/polish the CDB options dialog and correct translation code
of the break options.

Task-number: QTCREATORBUG-6207
Change-Id: I1805558abd4478ab680b1e292bb13306b3a0ff05
Reviewed-on: http://codereview.qt-project.org/5838
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>